# gc-automation

./: .gitignore  README.md  pyproject.toml
1 Match Template/: Template file 1.bt  batch file_detect peaks and match template.bat  command file_detect peaks and match template.cmd  configuration file 1.cfg
1 Match Template/Input/: 180808 5 ref mix.gci  180815 1 ref mix.gci  180815 9 ref mix.gci
2 Export Match File/: Alignment template file.bt  Summary report configuration file.rtcf  batch file_automated export match file.bat  command file_automated export match file.cmd  configuration file 2.cfg  python_code.py
2 Export Match File/Input/: 180808 5 alkane aromatic mix.gci  180815 1 alkane aromatic mix.gci  180815 9 alkane aromatic mix.gci
3 Apply Match File/: Summary report configuration file 2.rtcf  batch file_apply match files.bat  configuration file 1.cf  configuration file 1.cfg  process.cmd  process_base.cmd  python_code_2.py
3 Apply Match File/Exported Match Files/: 180808 5 alkane aromatic mix_Template_Match.csv  180815 1 alkane aromatic mix_Template_Match.csv  180815 9 alkane aromatic mix_Template_Match.csv
3 Apply Match File/Input/: 180808 5 ref mix.gci  180815 1 ref mix.gci  180815 9 ref mix.gci
docs/: Instruction.docx
gc_automation/: cli.py  gc_image.py  utils.py
