[tool.poetry]
name = "gc-automation"
version = "0.1.0"
description = ""
authors = ["Bo Zhao <3310824+colin-bz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^2.0.0"
lxml = "^4.5.1"
click = "^7.1.2"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
